--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=root
 # Log JPA queries
 spring.jpa.show-sql=true
 
-
 # Drop and create new tables (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:sql
