--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=fishmarket
 
 # MySQL connection properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fishstore
+spring.datasource.url=jdbc:mysql://localhost:3306/fishstore?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -11,6 +11,3 @@ spring.jpa.show-sql=true
 
 # Drop and create new tables (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=none
-
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:sql
